// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectProfileImage should handle upload file 1`] = `
<div>
  <div
    class="group space-y-2 undefined"
  >
    <span
      class="text-sm font-semibold transition-colors duration-100 cursor-default group-hover:text-theme-primary-600 text-theme-secondary-text"
    >
      Select Profile Image
    </span>
    <div
      class="flex flex-row"
    >
      <div
        class="relative w-20 h-20"
      >
        <div
          class="SelectProfileImage__ProfileImageStyled-t6smk3-1 bVbLLU"
        >
          <img
            alt="Avatar"
            class="object-cover min-h-full"
            data-testid="SelectProfileImage__avatar"
            src="test"
          />
          <button
            class="opacity-0 absolute w-full h-full p-1 z-50 transition-opacity	duration-200 overflow-hidden upload-button-overlay focus:outline-none"
            data-testid="SelectProfileImage__upload-button"
            type="button"
          >
            <div
              class="flex justify-center items-center h-full rounded-full bg-theme-secondary-900 dark:bg-black opacity-85"
            >
              <div
                class="sc-bdfBwQ cdgnVS text-white dark:text-theme-secondary-200"
                height="18"
                width="24"
              >
                <svg>
                  upload.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 gLgNOz flex absolute -top-3 -right-3 justify-center items-center p-1 w-6 h-6"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ fdfkzt"
              height="12"
              width="12"
            >
              <svg>
                close.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectProfileImage should not handle upload file 1`] = `
<div>
  <div
    class="group space-y-2 undefined"
  >
    <span
      class="text-sm font-semibold transition-colors duration-100 cursor-default group-hover:text-theme-primary-600 text-theme-secondary-text"
    >
      Select Profile Image
    </span>
    <div
      class="flex flex-row"
    >
      <div
        class="relative w-20 h-20"
      >
        <div
          class="SelectProfileImage__ProfileImageStyled-t6smk3-1 bVbLLU"
        >
          <img
            alt="Avatar"
            class="object-cover min-h-full"
            data-testid="SelectProfileImage__avatar"
            src="test"
          />
          <button
            class="opacity-0 absolute w-full h-full p-1 z-50 transition-opacity	duration-200 overflow-hidden upload-button-overlay focus:outline-none"
            data-testid="SelectProfileImage__upload-button"
            type="button"
          >
            <div
              class="flex justify-center items-center h-full rounded-full bg-theme-secondary-900 dark:bg-black opacity-85"
            >
              <div
                class="sc-bdfBwQ cdgnVS text-white dark:text-theme-secondary-200"
                height="18"
                width="24"
              >
                <svg>
                  upload.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 gLgNOz flex absolute -top-3 -right-3 justify-center items-center p-1 w-6 h-6"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ fdfkzt"
              height="12"
              width="12"
            >
              <svg>
                close.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectProfileImage should render 1`] = `
<div>
  <div
    class="group space-y-2 undefined"
  >
    <span
      class="text-sm font-semibold transition-colors duration-100 cursor-default group-hover:text-theme-primary-600 text-theme-secondary-text"
    >
      Select Profile Image
    </span>
    <div
      class="flex flex-row"
    >
      <div
        class="p-1 w-20 h-20 rounded-md border-2 border-dashed border-theme-secondary-400 dark:border-theme-secondary-700 focus-within:border-solid focus-within:border-theme-primary-400"
      >
        <div
          class="overflow-hidden h-full rounded-full"
        >
          <div
            class="SelectProfileImage__UploadButtonWrapper-t6smk3-0 euBdNq"
          >
            <button
              class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
              data-testid="SelectProfileImage__upload-button"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ cdgnVS text-theme-primary-600 dark:text-theme-secondary-200"
                  height="18"
                  width="24"
                >
                  <svg>
                    upload.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectProfileImage should render with value svg 1`] = `
<div>
  <div
    class="group space-y-2 undefined"
  >
    <span
      class="text-sm font-semibold transition-colors duration-100 cursor-default group-hover:text-theme-primary-600 text-theme-secondary-text"
    >
      Select Profile Image
    </span>
    <div
      class="flex flex-row"
    >
      <div
        class="relative w-20 h-20"
      >
        <div
          class="SelectProfileImage__ProfileImageStyled-t6smk3-1 bVbLLU"
        >
          <img
            alt="Avatar"
            class="object-cover min-h-full"
            data-testid="SelectProfileImage__avatar"
            src="data:image/svg+xml;utf8,<svg>test</svg>"
          />
          <span
            class="absolute text-2xl font-semibold text-theme-background"
          />
          <button
            class="opacity-0 absolute w-full h-full p-1 z-50 transition-opacity	duration-200 overflow-hidden upload-button-overlay focus:outline-none"
            data-testid="SelectProfileImage__upload-button"
            type="button"
          >
            <div
              class="flex justify-center items-center h-full rounded-full bg-theme-secondary-900 dark:bg-black opacity-85"
            >
              <div
                class="sc-bdfBwQ cdgnVS text-white dark:text-theme-secondary-200"
                height="18"
                width="24"
              >
                <svg>
                  upload.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectProfileImage should render without value svg 1`] = `
<div>
  <div
    class="group space-y-2 undefined"
  >
    <span
      class="text-sm font-semibold transition-colors duration-100 cursor-default group-hover:text-theme-primary-600 text-theme-secondary-text"
    >
      Select Profile Image
    </span>
    <div
      class="flex flex-row"
    >
      <div
        class="relative w-20 h-20"
      >
        <div
          class="SelectProfileImage__ProfileImageStyled-t6smk3-1 bVbLLU"
        >
          <img
            alt="Avatar"
            class="object-cover min-h-full"
            data-testid="SelectProfileImage__avatar"
            src="test"
          />
          <button
            class="opacity-0 absolute w-full h-full p-1 z-50 transition-opacity	duration-200 overflow-hidden upload-button-overlay focus:outline-none"
            data-testid="SelectProfileImage__upload-button"
            type="button"
          >
            <div
              class="flex justify-center items-center h-full rounded-full bg-theme-secondary-900 dark:bg-black opacity-85"
            >
              <div
                class="sc-bdfBwQ cdgnVS text-white dark:text-theme-secondary-200"
                height="18"
                width="24"
              >
                <svg>
                  upload.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <button
          class="OriginalButton__StyledButton-sc-1y2wptt-0 gLgNOz flex absolute -top-3 -right-3 justify-center items-center p-1 w-6 h-6"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ fdfkzt"
              height="12"
              width="12"
            >
              <svg>
                close.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
